--- a/po/main/fr.po
+++ b/po/main/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-11-02 22:21+0000\n"
-"PO-Revision-Date: 2016-08-18 20:34+0000\n"
+"PO-Revision-Date: 2016-11-09 15:40+0000\n"
 "Last-Translator: Fred <88com88@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-11-03 06:09+0000\n"
-"X-Generator: Launchpad (build 18246)\n"
+"X-Launchpad-Export-Date: 2016-11-11 06:29+0000\n"
+"X-Generator: Launchpad (build 18255)\n"
 
 #: SABnzbd.py:313 [Error message]
 msgid "Failed to start web-interface"
@@ -951,7 +951,7 @@ msgstr "Ce serveur n'authorise pas de connexion SSL sur ce port"
 
 #: sabnzbd/newswrapper.py:279
 msgid "Server %s uses an untrusted certificate [%s]"
-msgstr ""
+msgstr "Le serveur %s utilise un certificat peu fiable [%s]"
 
 #: sabnzbd/notifier.py:66 [Notification]
 msgid "Startup/Shutdown"
@@ -1559,19 +1559,19 @@ msgstr "Vérifié avec succès en utilisant des fichiers SFV"
 
 #: sabnzbd/postproc.py:770 # sabnzbd/postproc.py:771
 msgid "Trying RAR-based verification"
-msgstr ""
+msgstr "Tentative de vérification RAR"
 
 #: sabnzbd/postproc.py:780
 msgid "RAR files verified successfully"
-msgstr ""
+msgstr "Fichiers RAR vérifiés avec succès"
 
 #: sabnzbd/postproc.py:785
 msgid "RAR files failed to verify"
-msgstr ""
+msgstr "Echec lors de la vérification des fichiers RAR"
 
 #: sabnzbd/postproc.py:786
 msgid "[%s] RAR-based verification failed: %s"
-msgstr ""
+msgstr "[%s] La vérification RAR a échoué: %s"
 
 #: sabnzbd/postproc.py:843 [Error message] # sabnzbd/postproc.py:919 [Error message]
 msgid "Removing %s failed"
@@ -2329,7 +2329,7 @@ msgstr "Vider les NZB terminés"
 
 #: sabnzbd/skintext.py:250 [Button to delete jobs on current page in History]
 msgid "Purge NZBs on the current page"
-msgstr ""
+msgstr "Purger les NZBs de la page en cours"
 
 #: sabnzbd/skintext.py:251 [Button to add NZB to failed job in History]
 msgid "Optional Supplemental NZB"
@@ -2562,6 +2562,10 @@ msgid ""
 "is not possible. Python 2.7.9 or above, OpenSSL 1.0.2 or above and up-to-"
 "date local CA certificates are required."
 msgstr ""
+"Les connexions sécurisées (SSL) de SABnzbd vers les serveurs Usenet et aux "
+"sites HTTPS seront cryptées, mais la validation de l'identité d'un serveur à "
+"l'aide de ses certificats n'est pas possible. Python 2.7.9 ou supérieur, "
+"OpenSSL 1.0.2 ou supérieur, et des certificats locaux AC à jour sont requis."
 
 #: sabnzbd/skintext.py:313
 msgid "Version"
@@ -2672,6 +2676,8 @@ msgstr "Nom du fichier ou chemin du certificat HTTPS."
 msgid ""
 "Generate new self-signed certificate and key. Requires SABnzbd restart!"
 msgstr ""
+"Générer à nouveau les certificat et clé auto-signés. Nécessite le "
+"redémarrage de SABnzbd !"
 
 #: sabnzbd/skintext.py:342
 msgid "HTTPS Key"
@@ -3411,11 +3417,11 @@ msgstr ""
 
 #: sabnzbd/skintext.py:509
 msgid "SSL Ciphers"
-msgstr ""
+msgstr "Chiffrements SSL"
 
 #: sabnzbd/skintext.py:510
 msgid "Increase performance by forcing a lower SSL encryption strength."
-msgstr ""
+msgstr "Augmenter les performances en forçant un cryptage SSL plus faible."
 
 #: sabnzbd/skintext.py:511
 msgid "Maximum retries"
@@ -3578,13 +3584,15 @@ msgstr "SSL"
 
 #: sabnzbd/skintext.py:553
 msgid "Certificate verification"
-msgstr ""
+msgstr "Vérification du certificat"
 
 #: sabnzbd/skintext.py:554
 msgid ""
 "Default: when SSL is enabled, verify the identity of the server using its "
 "certificates. Strict: verify and enforce matching hostname."
 msgstr ""
+"Par défaut : lorsque SSL est activé, vérifie l'identité du serveur à l'aide "
+"de ses certificats. Strict : vérifie et applique le nom d'hôte correspondant."
 
 #: sabnzbd/skintext.py:555 # sabnzbd/skintext.py:785 # sabnzbd/skintext.py:898
 msgid "Disabled"
@@ -3592,7 +3600,7 @@ msgstr "Désactivé"
 
 #: sabnzbd/skintext.py:557
 msgid "Strict"
-msgstr ""
+msgstr "Strict"
 
 #: sabnzbd/skintext.py:559 [Explain server priority]
 msgid "0 is highest priority, 100 is the lowest priority"
@@ -3968,6 +3976,12 @@ msgid ""
 "separate terms. Wildcards in the terms are supported. <br>More information "
 "can be found on the Wiki."
 msgstr ""
+"Les indexeurs peuvent fournir une catégorie à l'intérieur du NZB que SABnzbd "
+"tentera de faire correspondre aux catégories définies ci-dessous. En outre, "
+"vous pouvez ajouter des termes à \"Catégories de l'indexeur / Groupes\" pour "
+"faire correspondre plus de catégories. Utilisez des virgules pour séparer "
+"les termes. Les caractères génériques sont pris en charge. <br> Plus "
+"d'informations peuvent être trouvées sur le Wiki."
 
 #: sabnzbd/skintext.py:675
 msgid ""
@@ -3986,7 +4000,7 @@ msgstr "Dossier/Chemin"
 
 #: sabnzbd/skintext.py:678
 msgid "Indexer Categories / Groups"
-msgstr ""
+msgstr "Catégories de l'indexeur / Groupes"
 
 #: sabnzbd/skintext.py:679 [Small delete button]
 msgid "X"
@@ -4938,6 +4952,8 @@ msgstr "Délai dépassé"
 msgid ""
 "Unknown SSL protocol: Try disabling SSL or connecting on a different port."
 msgstr ""
+"Protocole SSL inconnu: essayez de désactiver SSL ou de vous connecter sur un "
+"autre port."
 
 #: sabnzbd/utils/servertests.py:107
 msgid "Invalid server address."
